dev/customer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  namespace: yas-dev
  labels:
    app: customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
      - name: customer
        image: ghcr.io/nashtech-garage/yas-customer:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
