dev/customer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer
  namespace: yas-dev
  labels:
    app: customer
spec:
  type: ClusterIP
  selector:
    app: customer
  ports:
  - port: 80
    targetPort: 80
